fix to Java 15